--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,7 @@ body {
     -moz-box-shadow: 0 0 5px rgba(0,0,0,0.2);
     -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.2);
     box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+    margin:15px 0px;
 }
 
 .info {
