--- a/views/posts.html
+++ b/views/posts.html
@@ -24,6 +24,9 @@
                 <a href="#/posts/{{ postId }}">comments</a>
                 <a ng-click="deletePost(postId)" ng-show="signedIn() && post.owner === currentUser.username">delete</a>
             </div>
+            <div>
+                <span class="badge" ng-repeat="tag in post.tags">{{tag}}</span>
+            </div>
         </div>
         <div class="col-md-2">
 
