--- a/views/nav.html
+++ b/views/nav.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">angyo</a>
+        <a class="navbar-brand" href="#">CodeWheel</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -15,9 +15,6 @@
         <form class="navbar-form navbar-left" role="search" ng-submit="submitPost()" ng-show="signedIn()">
             <div class="form-group">
                 <input type="text" class="form-control" placeholder="Title" ng-model="post.title">
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Link" ng-model="post.url">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
