--- a/views/posts.html
+++ b/views/posts.html
@@ -1,7 +1,7 @@
 <div class="container posts-page">
-    <!--ng-show="(post.platform == 'testplatform')"-->
+    <!--| orderByPriority |filter:search-->
     <input ng-model="search"><p></p>
-    <div class="post row" ng-repeat="(postId, post) in posts | orderByPriority |filter:search" >
+    <div class="post row" ng-repeat="(postId, post) in posts " >
         <div class="col-xs-1">
             
             <div class="vote up"><span ng-hide="downVoted(post)" ng-click="upVotePost(postId, upVoted(post))">▲</span></div>
@@ -11,9 +11,8 @@
         <div class="col-md-9 col-xs-11">
 
             <div class="info">
-                <a href="{{ post.url }}" target="_blank">
+                <a href="#/posts/{{ postId }}">
                     {{ post.title }}
-                    <span class="url">({{ post.url | hostnameFromUrl }})</span>
                 </a>
             </div>
             <div>
