--- a/views/nav.html
+++ b/views/nav.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">CodeWheel</a>
+        <a class="navbar-brand" href="#"><i class="fa fa-cog"></i> CodeWheel</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
