--- a/views/posts.html
+++ b/views/posts.html
@@ -1,34 +1,34 @@
 <div class="container posts-page">
-    <!--| orderByPriority |filter:search-->
-    <input ng-model="search"><p></p>
-    <div class="post row" ng-repeat="(postId, post) in posts " >
+    <!---->
+    <input ng-model="search" class="form-control" placeholder="search"><p></p>
+    <div class="post row" ng-repeat="post in posts | orderByPriority | orderBy:'-score' |filter:search " >
         <div class="col-xs-1">
             
-            <div class="vote up"><span ng-hide="downVoted(post)" ng-click="upVotePost(postId, upVoted(post))">▲</span></div>
-            <div class="vote down"><span ng-hide="upVoted(post)" ng-click="downVotePost(postId, downVoted(post))">▼</span></div>
+            <div class="vote up"><span ng-hide="downVoted(post)" ng-click="upVotePost(post.postId, upVoted(post))">▲</span></div>
+            <div class="vote down"><span ng-hide="upVoted(post)" ng-click="downVotePost(post.postId, downVoted(post))">▼</span></div>
+            
+            <h1 class="pull-right votenum">{{ post.score || 0 }}</h1>
 
         </div>
         <div class="col-md-9 col-xs-11">
-
+            
             <div class="info">
-                <a href="#/posts/{{ postId }}">
+                <a href="#/posts/{{ post.postId }}">
                     {{ post.title }}
                 </a>
+                <span class="badge alert-success"> {{commentCount(post)}} comments </span>
+                <a ng-click="deletePost(post.postId)" ng-show="signedIn() && post.owner === currentUser.username">delete</a>
             </div>
             <div>
-                <span>{{ post.score || 0 }} votes</span>
-                -
-                <span>submitted by <a href="#/users/{{post.owner}}">{{post.owner}}</a></span>
-                -
-                <a href="#/posts/{{ postId }}">comments</a>
-                <a ng-click="deletePost(postId)" ng-show="signedIn() && post.owner === currentUser.username">delete</a>
+                Platform: <span class="badge alert-info">{{post.platform || "none"}}</span> Tags: <span class="badge" ng-repeat="tag in post.tags">{{tag}}</span>
             </div>
-            <div>
-                <span class="badge" ng-repeat="tag in post.tags">{{tag}}</span>
-            </div>
+            
         </div>
         <div class="col-md-2">
-
+            <a href="#/users/{{post.owner}}">
+                <img ng-src="http://www.gravatar.com/avatar/{{ getAuthor(post.postId).md5_hash }}" class="nav-pic" />
+                {{post.owner}}
+            </a>
         </div>
 
     </div>
