--- a/views/showpost.html
+++ b/views/showpost.html
@@ -9,22 +9,19 @@
         <div class="col-md-9 col-xs-11">
 
             <div class="info">
-                {{ post.title }}
+                    {{ post.title }}
+                <a ng-click="deletePost(post.postId)" ng-show="signedIn() && post.owner === currentUser.username">delete</a>
             </div>
             <div>
-                <span>{{ post.score || 0 }} votes</span>
-                -
-                <span>submitted by <a href="#/users/{{post.owner}}">{{post.owner}}</a></span>
-                -
-                <a href="#/posts/{{ postId }}">comments</a>
-                <a ng-click="deletePost(postId)" ng-show="signedIn() && post.owner === currentUser.username">delete</a>
+                Platform: <span class="badge alert-info">{{post.platform || "none"}}</span> Tags: <span class="badge" ng-repeat="tag in post.tags">{{tag}}</span>
             </div>
-            <div>
-                <span class="badge" ng-repeat="tag in post.tags">{{tag}}</span>
-            </div>
+
         </div>
         <div class="col-md-2">
-
+            <a href="#/users/{{post.owner}}">
+                <img ng-src="http://www.gravatar.com/avatar/{{ getAuthor(post.postId).md5_hash }}" class="nav-pic" />
+                {{post.owner}}
+            </a>
         </div>
 
     </div>
@@ -35,7 +32,6 @@
         </p>
         <div class="col-md-12">
             <p>{{ comment.text }}</p>
-            <p class="author">posted by <a href="#/users/{{ comment.username }}">{{ comment.username }}</a></p>
         </div>
     </div>
 
